# superset-deploy

./: .env.example  .env.free-tier  .gitignore  CLAUDE.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  check-versions.sh  package.json  pyproject.toml  quick-start-full.sh  quick-start-minimal.sh  quick-start.sh  requirements-dev.txt  requirements.txt  system.yaml.example  troubleshoot.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: docker-compose.free-tier.yaml  docker-compose.full-free-tier.yaml  docker-compose.local.yaml  docker-compose.minimal.yaml  docker-compose.yaml
docker/cloudflared/: README.md  config.yaml  credentials.json.example
docker/local/: README.md  docker-init.sh  superset_config.py  superset_config_free_tier.py  superset_config_full_free_tier.py  superset_config_minimal.py  superset_config_standard.py  superset_config_v5.py
docker/monitoring/: prometheus-free-tier.yml  prometheus.yml
docs/: ARCHITECTURE.md  CLOUDFLARE_TUNNEL_GUIDE.md  EXAMPLES.md  FAQ.md  FREE_TIER_CLARIFICATION.md  GCP_DEPLOYMENT_GUIDE.md  GCP_FREE_TIER_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE.md  PULUMI_CONFIG_GUIDE.md  PYTHON_COMPATIBILITY.md  QUICK_START.md
examples/configs/: README.md  free-tier.yaml  high-availability.yaml  local-deployments.yaml  multi-environment.yaml  multi-project.yaml
pulumi/: Pulumi.yaml  __main__.py
pulumi/stacks/: base.py  (+4 more)
scripts/: check-limits.sh  common.sh  create-buckets.sh  deploy.sh  init-free-tier.sh  migrate_config.py  reset-free-tier.sh  setup-tunnel.sh  setup.sh  validate.py
tests/: __init__.py  test_config.py
(+13 files in other folders)
